--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -18,6 +18,7 @@
     </div>
     <div class="button"></div>
   </div>
+  <div id="clrbutton"></div>
 </div>
   <script src="script.js"></script>
 </body>
