--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -19,7 +19,9 @@
     <div class="button"></div>
   </div>
   <div id="clrbutton"></div>
+  <div id="musicbutton"></div>
 </div>
+  <audio id="music" src="lo-fi.mp3" loop></audio>
   <script src="script.js"></script>
 </body>
 </html>
